# tamagotchi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  connexion.tam  tamagotchi
doc/: cmake.txt  info.txt
python/: database.py  tamagotchi.py
sources/: button.cpp  button.h  connexion.cpp  connexion.h  draw.cpp  draw.h  showBMP.cpp  showBMP.h  sql.cpp  sql.h  tamagotchi.cpp  tamagotchi.sh  textinput.cpp  textinput.h  timeleft.cpp  timeleft.h
sql/: tamagotchi.sql
